--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,67 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/** Fonts **/
+
+/* jost-regular */
+@font-face {
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/static/fonts/Jost/Jost-Regular.ttf');
+}
+
+/* jost-medium */
+@font-face {
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 500;
+  src: url('/static/fonts/Jost/Jost-Medium.ttf');
+}
+
+/* jost-bold */
+@font-face {
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 700;
+  src: url('/static/fonts/Jost/Jost-Bold.ttf');
+}
+
+/* Alegreya-regular */
+@font-face {
+  font-family: 'Alegreya';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/static/fonts/Alegreya/Alegreya-Regular.ttf');
+}
+
+/* Alegreya-medium */
+@font-face {
+  font-family: 'Alegreya';
+  font-style: normal;
+  font-weight: 500;
+  src: url('/static/fonts/Alegreya/Alegreya-Medium.ttf');
+}
+
+/* Alegreya-bold */
+@font-face {
+  font-family: 'Alegreya';
+  font-style: normal;
+  font-weight: 700;
+  src: url('/static/fonts/Alegreya/Alegreya-Bold.ttf');
+}
+
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+body{
+  font-family:'Jost', "Impact";
+  font-weight:400;
 }
 
 a {
@@ -14,3 +72,4 @@ a {
 * {
   box-sizing: border-box;
 }
+
