--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,6 +69,18 @@ a {
   text-decoration: none;
 }
 
+h2 {
+  font-family: 'Alegreya';
+  font-weight:700;
+  font-size: 1.5rem;
+  padding-bottom: 9px;
+}
+
+p {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 * {
   box-sizing: border-box;
 }
