--- a/styles/pages/home.module.css
+++ b/styles/pages/home.module.css
@@ -1,3 +1,13 @@
 .header{
     height: 360px;
 }
+
+.homeBandeauVideoContainer{
+    height: 360px;
+}
+
+.homeBandeauVideo{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
