--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,6 +52,7 @@
   src: url('/static/fonts/Alegreya/Alegreya-Bold.ttf');
 }
 
+@import "./pagecontent.css";
 
 html,
 body {
@@ -63,50 +64,6 @@ body{
     @apply bg-pyellow;
   font-family:'Jost', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight:400;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-h2 {
-  font-family: "Alegreya", Verdana, Geneva, Tahoma, sans-serif;
-  font-weight:700;
-  @apply text-2xl;
-  @apply sm:text-3xl;
-  padding-bottom: 9px;
-  
-}
-
-h3 {
-  font-family: "Alegreya", Verdana, Geneva, Tahoma, sans-serif;
-  font-weight:700;
-  @apply text-xl;
-  @apply sm:text-2xl;
-  padding-top: 6px;
-  padding-bottom: 9px;
-}
-
-ul {
-    list-style: disc;
-    @apply pl-10 my-4;
-}
-
-ol {
-    list-style: decimal;
-    @apply pl-10 my-4;
-}
-
-li {
-  @apply leading-tight;
-}
-
-
-p {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-  padding-bottom: 6px;
 }
 
 * {
