format image popup

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -162,21 +162,23 @@ button{
   background-position: center;
 }
 
-@media screen {
 
 
-  .popup-content {
+
+
+  .popimage-content {
     margin: auto;
     background: rgb(255, 255, 255);
-    
+    height: 90vh;
     border: rgb(255, 255, 255) solid;
   }
-  .popup-arrow {
+
+  .popimage-arrow {
     color: rgb(255, 255, 255);
   }
+
   
-  
-  .popup-overlay {
+  .popimage-overlay {
     background: rgba(0, 0, 0, 0.719);
     
   }
@@ -196,7 +198,10 @@ button{
   [data-popup='tooltip'].popup-overlay {
     background: transparent;
   }
-}
+
+
+
+
 
 /* Libs */
 
