--- a/styles/pagecontent.css
+++ b/styles/pagecontent.css
@@ -50,4 +50,8 @@
     line-height: 1.75rem;
     padding-bottom: 6px;
     @apply text-justify;
-  }
+}
+
+.pagecontent .pointille{
+  text-decoration: underline dotted;
+}
