--- a/styles/pagecontent.css
+++ b/styles/pagecontent.css
@@ -52,3 +52,13 @@
 .video-modal-overlay {
     background: rgba(0, 0, 0, 0.5);
 }
+
+/* Images */
+
+.pagecontent .page__imgfloatright{
+    @apply border-2 border-red-500 float-right;
+}
+
+.pagecontent .page__imgfloatleft{
+    @apply border-2 border-green-500 float-left;
+}
