--- a/styles/pagecontent.css
+++ b/styles/pagecontent.css
@@ -56,9 +56,9 @@
 /* Images */
 
 .pagecontent .page__imgfloatright{
-    @apply border-2 border-red-500 float-right;
+    @apply float-right clear-right md:w-1/3 w-full p-0 md:pt-2 md:pl-2;
 }
 
 .pagecontent .page__imgfloatleft{
-    @apply border-2 border-green-500 float-left;
+    @apply float-left clear-left md:w-1/3 w-full p-0 md:pr-2 md:pt-2;
 }
