--- a/styles/pagecontent.css
+++ b/styles/pagecontent.css
@@ -59,6 +59,11 @@
     @apply float-right clear-right md:w-1/3 w-full p-0 md:pt-2 md:pl-2;
 }
 
+
+.pagecontent .page__imgaligncenter{
+    @apply md:w-2/3 w-full mx-auto;
+}
+
 .pagecontent .page__imgfloatleft{
     @apply float-left clear-left md:w-1/3 w-full p-0 md:pr-2 md:pt-2;
 }
