--- a/styles/pagecontent.css
+++ b/styles/pagecontent.css
@@ -56,7 +56,7 @@
 /* Images */
 
 .pagecontent .page__imgfloatright{
-    @apply float-right clear-right md:w-1/3 w-full p-0 md:pt-2 md:pl-2;
+    @apply float-right clear-right md:w-1/3 w-full p-0 md:mt-2 md:ml-2;
 }
 
 
@@ -65,5 +65,5 @@
 }
 
 .pagecontent .page__imgfloatleft{
-    @apply float-left clear-left md:w-1/3 w-full p-0 md:pr-2 md:pt-2;
+    @apply float-left clear-left md:w-1/3 w-full p-0 md:mr-2 md:mt-2;
 }
